--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@
 .ipynb_checkpoints
 *.pyc
 __pycache__
-
-src/generate_results_by_category.py
+output
 
 # Ignore all sphynx documentation stuff
 docs
