--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 git+https://github.com/USEPA/Federal-LCA-Commons-Elementary-Flow-List#egg=fedelemflowlist
 git+https://github.com/NETL-RIC/netlolca#egg=netlolca
 numpy
+pubchempy
+pymatgen.core
